--- a/index.html
+++ b/index.html
@@ -1,113 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/img/favicon-32x32.png"
-    />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
-      rel="stylesheet"
-    />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet"> 
 
-    <link rel="stylesheet" href="output.css" />
+  <link rel="stylesheet" href="output.css">
+  
+  <title>Frontend Mentor | Stats preview card component</title>
+</head>
+<body class="grid place-items-center min-h-screen bg-primary-1 h-full">
+  <main class="grid place-items-center text-center bg-primary-2 rounded-xl mx-6 overflow-hidden max-w-xl lg:max-w-[70rem] lg:grid-cols-2">
+    <div class="relative h-full w-full lg:order-last">
+      <div class="overlay absolute top-0 left-0 h-full bg-accent-1 w-full"></div>
+      <picture class="w-fit h-fit">
+        <source src="./assets/img/image-header-desktop.jpg" media="(min-width: 900px)" class="block mix-blend-multiply opacity-75">
+        <img src="./assets/img/image-header-mobile.jpg" alt="header-img" class="mix-blend-multiply opacity-75 h-full w-full object-cover">
+      </picture>
+    </div>
 
-    <title>Frontend Mentor | Stats preview card component</title>
-  </head>
-  <body class="grid h-full min-h-screen place-items-center bg-primary-1">
-    <main
-      class="mx-6 grid max-w-xl place-items-center overflow-hidden rounded-xl bg-primary-2 text-center lg:max-w-[70rem] lg:grid-cols-2"
-    >
-      <div class="relative h-full w-full lg:order-last">
-        <picture class="h-fit w-fit">
-          <div
-            class="overlay absolute top-0 left-0 h-full w-full bg-accent-1"
-          ></div>
-          <source
-            src="./assets/img/image-header-desktop.jpg"
-            media="(min-width: 900px)"
-            class="block opacity-75 mix-blend-multiply"
-          />
-          <img
-            src="./assets/img/image-header-mobile.jpg"
-            alt="header-img"
-            class="h-full w-full object-cover opacity-75 mix-blend-multiply"
-          />
-        </picture>
+    <div class="grid gap-4 p-8 lg:text-left lg:p-16 xl:p-20 lg:gap-8 xl:pb-16">
+      <h1 class="text-white font-bold font-heading text-3xl lg:text-[1.8rem] xl:text-[2.1rem] lg:leading-snug">
+        Get <span class="text-accent-1"> insights </span> that help your business grow.
+      </h1>
+      <p class="text-neutral-400 text-base" >
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
+      </p>
+
+      <div class="uppercase grid gap-y-7 grid-cols-1  mt-7 sm:grid-cols-2 lg:grid-cols-3 xl:mt-10">
+        <h2 class="text-white text-2xl lowercase flex flex-col font-bold gap-[3px]">
+          10k+ 
+          <span class="text-neutral-300 font-body uppercase font-normal text-[.9rem]">companies</span> 
+        </h2>
+        <h2 class="text-white text-2xl flex flex-col font-bold gap-[3px]">
+          314 
+          <span class="text-neutral-300 font-body font-normal text-[.9rem]">templates</span> 
+        </h2>
+        <h2 class="text-white text-2xl flex flex-col font-bold gap-[3px] sm:col-span-2 lg:col-auto">
+          12m+ 
+          <span class="text-neutral-300 font-body font-normal text-[.9rem]">queries</span> 
+        </h2>
       </div>
+    </div>
 
-      <div
-        class="grid gap-4 p-8 lg:gap-8 lg:p-16 lg:text-left xl:p-20 xl:pb-16"
-      >
-        <h1
-          class="font-heading text-3xl font-bold text-white lg:text-[1.8rem] lg:leading-snug xl:text-[2.1rem]"
-        >
-          Get <span class="text-accent-1"> insights </span> that help your
-          business grow.
-        </h1>
-        <p class="text-base text-neutral-400">
-          Discover the benefits of data analytics and make better decisions
-          regarding revenue, customer experience, and overall efficiency.
-        </p>
-
-        <div
-          role="list"
-          class="mt-7 grid grid-cols-1 gap-y-7 uppercase sm:grid-cols-2 lg:grid-cols-3 xl:mt-10"
-        >
-          <h2
-            role="listitem"
-            class="flex flex-col gap-[3px] text-2xl font-bold lowercase text-white"
-          >
-            10k+
-            <span
-              class="font-body text-[.9rem] font-normal uppercase text-neutral-300"
-              >companies</span
-            >
-          </h2>
-          <h2
-            role="listitem"
-            class="flex flex-col gap-[3px] text-2xl font-bold text-white"
-          >
-            314
-            <span class="font-body text-[.9rem] font-normal text-neutral-300"
-              >templates</span
-            >
-          </h2>
-          <h2
-            role="listitem"
-            class="flex flex-col gap-[3px] text-2xl font-bold text-white sm:col-span-2 lg:col-auto"
-          >
-            12m+
-            <span class="font-body text-[.9rem] font-normal text-neutral-300"
-              >queries</span
-            >
-          </h2>
-        </div>
-      </div>
-    </main>
-    <footer
-      class="footer absolute bottom-4 text-center text-sm text-neutral-300"
-    >
-      Challenge by
-      <a
-        class="footer__link text-accent-1 text-opacity-75 underline"
-        href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62/hub"
-        target="blank"
-        >Frontend Mentor</a
-      >
-      Coded by
-      <a
-        class="footer__link text-accent-1 text-opacity-75 underline"
-        href="https://github.com/devhnry"
-        >devhnry</a
-      >
-    </footer>
-  </body>
+  </main>
+  <footer class="footer absolute bottom-4 text-center text-sm text-neutral-300">
+      Challenge by <a  class="footer__link text-accent-1 text-opacity-75 underline" href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62/hub" target="blank">Frontend Mentor</a>
+      Coded by <a class="footer__link text-accent-1 text-opacity-75 underline" href="https://github.com/devhnry">devhnry</a>
+  </footer>
+</body>
 </html>
