✅ Corrected Accesibility Error in HTML

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="relative h-full w-full lg:order-last">
       <div class="overlay absolute top-0 left-0 h-full bg-accent-1 w-full"></div>
       <picture class="w-fit h-fit">
-        <source src="./assets/img/image-header-desktop.jpg" media="(min-width: 900px)" class="block mix-blend-multiply opacity-75">
+        <source srcset="./assets/img/image-header-desktop.jpg" media="(min-width: 900px)" class="block mix-blend-multiply opacity-75">
         <img src="./assets/img/image-header-mobile.jpg" alt="header-img" class="mix-blend-multiply opacity-75 h-full w-full object-cover">
       </picture>
     </div>
